[package]
name = "ressua_wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.3"
secp256k1 = {version = "0.29.1", features = ["rand-std"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
bs58 = "0.5.1"